name:                hGM
version:             0.1.0.0
synopsis:            RPG GM Story Management Tool
description:         Please see README.md
homepage:            https://github.com/sulami/hgm
license:             BSD3
license-file:        LICENSE
author:              Robin Schroer
maintainer:          sulami@peerwire.org
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

Flag dev
    Description:   Turn on development settings, like auto-reload templates.
    Default:       False

Flag library-only
    Description:   Build for use with "yesod devel"
    Default:       False

library
    hs-source-dirs: ., app, src
    default-language:  Haskell2010
    exposed-modules: Application
                     Foundation
                     Import
                     Import.NoFoundation
                     Import.Semantic
                     Import.Premium
                     Model
                     Settings
                     Settings.StaticFiles
                     Secret
                     Handler.Common
                     Handler.Home
                     Handler.Entry
                     Handler.EntryNew
                     Handler.EntryList
                     Handler.EntryEdit
                     Handler.EntryDel
                     Handler.Dice
                     Handler.DiceRoll
                     Handler.CampaignNew
                     Handler.CampaignDel
                     Handler.Overview
                     Handler.Premium
                     Handler.Faq
                     Handler.HandoutNew
                     Handler.Handout
                     Handler.HandoutEdit
                     Handler.HandoutDel
                     Handler.HandoutShare
                     Handler.Shared
                     Handler.CampaignOpts
                     Game.DnD.GM.Dice

    if flag(dev) || flag(library-only)
        cpp-options:   -DDEVELOPMENT
        ghc-options:   -Wall -fwarn-tabs -O0
    else
        ghc-options:   -Wall -fwarn-tabs

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        ViewPatterns
                        TupleSections
                        RecordWildCards

    build-depends: base
                 , yesod
                 , yesod-core
                 , yesod-auth
                 , yesod-static
                 , yesod-form
                 , classy-prelude
                 , classy-prelude-conduit
                 , classy-prelude-yesod
                 , bytestring
                 , text
                 , persistent
                 , persistent-sqlite
                 , persistent-template
                 , template-haskell
                 , shakespeare
                 , hjsmin
                 , monad-control
                 , wai-extra
                 , yaml
                 , http-conduit
                 , directory
                 , warp
                 , data-default
                 , aeson
                 , conduit
                 , monad-logger
                 , fast-logger
                 , wai-logger
                 , file-embed
                 , safe
                 , unordered-containers
                 , containers
                 , vector
                 , time
                 , random
                 , yesod-text-markdown
                 , markdown
                 , stripe-haskell

executable         hGM
    if flag(library-only)
        Buildable: False

    main-is:           main.hs
    hs-source-dirs:    app
    build-depends:     base, hGM
    default-language:  Haskell2010

    ghc-options:       -threaded -O2 -rtsopts -with-rtsopts=-N

test-suite test
    type:              exitcode-stdio-1.0
    main-is:           Spec.hs
    hs-source-dirs:    test
    ghc-options:       -Wall
    default-language:  Haskell2010

    default-extensions: TemplateHaskell
                        QuasiQuotes
                        OverloadedStrings
                        NoImplicitPrelude
                        CPP
                        MultiParamTypeClasses
                        TypeFamilies
                        GADTs
                        GeneralizedNewtypeDeriving
                        FlexibleContexts
                        EmptyDataDecls
                        NoMonomorphismRestriction
                        DeriveDataTypeable
                        ViewPatterns
                        TupleSections

    build-depends: base
                 , hGM
                 , yesod-test >= 1.4.3 && < 1.5
                 , yesod-core
                 , yesod
                 , persistent
                 , persistent-sqlite
                 , resourcet
                 , monad-logger
                 , shakespeare
                 , transformers
                 , hspec >= 2.0.0
                 , classy-prelude
                 , classy-prelude-yesod
source-repository head
  type:     git
  location: https://github.com/sulami/hgm
